Modified hover and look functionality to use event triggers instead of callbacks

--- a/examples/bush1/index.html
+++ b/examples/bush1/index.html
@@ -182,7 +182,7 @@
 				},
 				onHover: function(event) {
 					hideHover();
-				}
+				},
 			});
 			bottomGrid = skybox.addImage({
 				image: 'images/overlaynegy.png',
@@ -214,6 +214,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Cycas armstrongii</i><br>Common name: Cycad</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -228,6 +231,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Planchonia careya</i><br>Common name: Cocky Apple</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -242,6 +248,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Planchonia careya</i><br>Common name: Cocky Apple</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 
 				},
@@ -257,6 +266,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Grevillea decurrens</i><br>Common name: Grevillea</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -271,6 +283,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Sorghum (Sarga) intrans</i><br>Common name: Spear Grass (seed head)</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -285,6 +300,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Cochlospermum fraseri</i><br>Common name: Kapok tree</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -299,6 +317,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Acacia auriculiformis</i><br>Common name: Black Wattle</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -313,6 +334,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Erythrophleum chlorostachys</i><br>Common name: Ironwood</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -327,6 +351,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Tacca leontopetaloides</i><br>Common name: Tacca</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -341,6 +368,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Exocarpos latifolius</i><br>Common name: Native Cherry</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -355,6 +385,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Andropogon gayanus</i><br>Common name: Gamba Grass</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -369,6 +402,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Gardenia megasperma</i><br>Common name: Wild Gardenia <br>(observe the fruit)</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -383,6 +419,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Eucalyptus tetrodonta</i><br>Common name:  Stringybark (overstorey)</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -397,6 +436,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Smilax australis</i><br>Common name: Austral Sarsaparilla</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -411,6 +453,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Buchanania obovata</i><br>Common name: Green Plum</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -425,6 +470,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Acacia auriculiformis</i><br>Common name: Black Wattle (flower)</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -437,6 +485,9 @@
 					// No reference page for the wild passion fruit
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Scientific name: <i>Passiflora foetida</i><br>Common name: Wild Passion Fruit</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -452,6 +503,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover" ><p>Observe the edge effect. Are there more <br>or less weeds and introduced species <br>in this area?</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				},
 				{
@@ -466,6 +520,9 @@
 					},
 					onHover: function(event) {
 						showHover(event, '<div class="hover"><p>Scientific name: <i>Eucalyptus tetrodonta</i><br>Common name:  Stringybark (overstorey)</p></div>');
+					},
+					hoverOff: function() {
+						hideHover();
 					}
 				}
 			];
